# UsbAndroid

./: .gitignore  CMakeLists.txt  LICENSE  README.md
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/org/qtproject/example/usbandroid/: DeviceDownloader.java  UsbSerialBridge.java
android_backup/: AndroidManifest.xml  build.gradle
android_backup/src/org/qtproject/example/usbandroid/: UsbSerialBridge.java
models/: sdm120.json
src/: Main.qml  backend.cpp  backend.h  deviceregistermodel.cpp  deviceregistermodel.h  main.cpp  registermodel.cpp  registermodel.h  usbscanner.cpp  usbscanner.h
